--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,12 +116,14 @@
                 <section>
                     Made using
                     <iron-icon icon="polymer"></iron-icon>
-                    <a href="https://www.polymer-project.org/1.0/" title="Polymer Project">Polymer</a>,
+                    <a href="https://www.polymer-project.org/1.0/" title="Polymer Project">Polymer</a> and
+                    <iron-icon icon="mdi:jekyll"></iron-icon>
                     <a href="https://jekyllrb.com/" title="Jekyll Static Site Generator">Jekyll</a>.
                     Proudly hosted by
                     <!-- TODO uncomment line when hosted on Uberspace server
                     <a href="https://uberspace.de/" title="Uberspace.de">Uberspace</a>
                     -->
+                    <iron-icon icon="mdi:github-circle"></iron-icon>
                     <a href="https://uberspace.de/" title="Github Pages">GitHub</a>.
                 </section>
             </footer>
