--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -233,8 +233,9 @@ app-drawer-layout {
 
 /* Footer */
 footer {
+    margin-top: 48px;
     border-top: 1px solid $divider-color;
-    padding: 16px;
+    padding: 24px;
     text-align: center;
     display: flex;
     flex-flow: row wrap;
@@ -244,6 +245,11 @@ footer {
 
     a {
         color: $footer-color;
+    }
+
+    iron-icon {
+        width: 16px;
+        height: 16px;
     }
 
     section {
