--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -84,6 +84,10 @@ app-drawer-layout {
                 paper-icon-button {
                     position: relative;
                     top: -1px;
+
+                    paper-ripple {
+                        color: $text-color-primary-inverse;
+                    }
                 }
             }
         }
@@ -150,7 +154,7 @@ app-drawer-layout {
     position: relative;
     background: no-repeat local center center;
     background-size: cover;
-    min-height: 600px;
+    min-height: 680px;
     height: 100vh;
     box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14),
     inset 0 -3px 14px 2px rgba($color-black, .12),
@@ -186,6 +190,10 @@ app-drawer-layout {
         iron-icon {
             position: relative;
             top: 4px;
+        }
+
+        paper-ripple {
+            color: $text-color-primary-inverse;
         }
     }
 }
