--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,13 +115,14 @@
                 </section>
                 <section>
                     Made using
-                    <a href="https://www.polymer-project.org/1.0/" title="Polymer Project">Polymer</a> and
-                    <a href="https://jekyllrb.com/" title="Jekyll Static Site Generator">Jekyll</a>.
+                    <a href="https://www.polymer-project.org/1.0/" title="Polymer Project" target="_blank">Polymer</a>
+                    and
+                    <a href="https://jekyllrb.com/" title="Jekyll Static Site Generator" target="_blank">Jekyll</a>.
                     Proudly hosted by
                     <!-- TODO uncomment line when hosted on Uberspace server
-                    <a href="https://uberspace.de/" title="Uberspace.de">Uberspace</a>
+                    <a href="https://uberspace.de/" title="Uberspace.de" target="_blank">Uberspace</a>
                     -->
-                    <a href="https://uberspace.de/" title="Github Pages">GitHub</a>.
+                    <a href="https://uberspace.de/" title="Github Pages" target="_blank">GitHub</a>.
                 </section>
             </footer>
 
