--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -298,11 +298,9 @@ textarea {
 @media only screen and (min-width: 35em) {
     /* Style adjustments for viewports that meet the condition */
 }
-
 @media print, (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
-
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
@@ -376,7 +374,6 @@ textarea {
         page-break-after: avoid;
     }
 }
-
 /**
  * Copyright 2015 Google Inc. All Rights Reserved.
  *
@@ -558,7 +555,7 @@ h1, h2, h3, h4, h5, h6, p {
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 56px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.35;
     letter-spacing: -0.02em;
     opacity: 0.54;
@@ -568,7 +565,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
 h1 {
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 56px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.35;
     letter-spacing: -0.02em;
     margin-top: 24px;
@@ -578,7 +575,7 @@ h1 {
 h2 {
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 45px;
-    font-weight: 400;
+    font-weight: 600;
     line-height: 48px;
     margin-top: 24px;
     margin-bottom: 24px;
@@ -587,7 +584,7 @@ h2 {
 h3 {
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 34px;
-    font-weight: 400;
+    font-weight: 600;
     line-height: 40px;
     margin-top: 24px;
     margin-bottom: 24px;
@@ -596,7 +593,7 @@ h3 {
 h4 {
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
     line-height: 32px;
     -moz-osx-font-smoothing: grayscale;
     margin-top: 24px;
@@ -615,7 +612,7 @@ h5 {
 
 h6 {
     font-family: "Kreon", "Georgia", "Times New Roman", serif;
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.04em;
@@ -742,7 +739,6 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
         text-shadow: none;
     }
 }
-
 /* Code blocks */
 pre[class*="language-"] {
     padding: 1em;
@@ -1068,7 +1064,6 @@ pre[class*="language-"] a[href]:hover {
         stroke-dashoffset: -100;
     }
 }
-
 @-o-keyframes prism-previewer-time {
     0% {
         stroke-dasharray: 0, 500;
@@ -1083,7 +1078,6 @@ pre[class*="language-"] a[href]:hover {
         stroke-dashoffset: -100;
     }
 }
-
 @-moz-keyframes prism-previewer-time {
     0% {
         stroke-dasharray: 0, 500;
@@ -1098,7 +1092,6 @@ pre[class*="language-"] a[href]:hover {
         stroke-dashoffset: -100;
     }
 }
-
 @keyframes prism-previewer-time {
     0% {
         stroke-dasharray: 0, 500;
@@ -1113,7 +1106,6 @@ pre[class*="language-"] a[href]:hover {
         stroke-dashoffset: -100;
     }
 }
-
 .prism-previewer-time:before {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -1221,7 +1213,7 @@ paper-button {
     font-weight: 500 !important;
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
     line-height: 1;
     letter-spacing: 0;
@@ -1261,7 +1253,7 @@ app-drawer-layout app-header-layout app-header app-toolbar paper-button {
     font-weight: 500 !important;
     font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
     line-height: 1;
     letter-spacing: 0;
@@ -1277,11 +1269,9 @@ app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button {
 app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button paper-ripple {
     color: white;
 }
-
 app-drawer-layout app-header-layout .content {
     margin-top: -64px;
 }
-
 app-drawer-layout app-drawer {
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
     z-index: 8;
@@ -1298,11 +1288,9 @@ app-drawer-layout app-drawer app-toolbar h1 {
 app-drawer-layout app-drawer .narrow paper-button, app-drawer-layout app-drawer .narrow paper-icon-button {
     display: none;
 }
-
 app-drawer-layout.narrow app-header-layout app-header app-toolbar paper-button, app-drawer-layout.narrow app-header-layout app-header app-toolbar paper-icon-button:not([drawer-toggle]) {
     display: none;
 }
-
 app-drawer-layout:not(.narrow) app-drawer app-toolbar {
     display: none;
 }
@@ -1376,16 +1364,22 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
 }
 
 /* Work section */
+.apps, .libraries {
+    margin: 8px 0;
+}
+
 .apps paper-card, .libraries paper-card {
     align-self: flex-start;
 }
 
 .apps paper-card .card-content h5, .libraries paper-card .card-content h5 {
     margin-top: 8px;
+    font-weight: 400;
 }
 
 .apps paper-card .card-content p, .libraries paper-card .card-content p {
     font-family: "Kreon", "Georgia", "Times New Roman", serif;
+    font-size: 17px;
     margin-bottom: 0;
 }
 
@@ -1406,7 +1400,7 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
 
 .apps .cta-cell p, .libraries .cta-cell p {
     font-family: "Kreon", "Georgia", "Times New Roman", serif;
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.04em;
@@ -1461,7 +1455,6 @@ footer section.right {
 .post > header p, .post > header a {
     font-weight: 400;
 }
-
 .post > section img {
     display: block;
     max-width: 100%;
@@ -1487,7 +1480,6 @@ footer section.right {
         padding: 0 0 0 24px;
     }
 }
-
 /* Small tablet */
 @media screen and (max-width: 840px) {
     .cover > .cover-inner > h1 {
@@ -1502,7 +1494,6 @@ footer section.right {
         width: 30%;
     }
 }
-
 /* Mobile */
 @media screen and (max-width: 480px) {
     .cover > .cover-inner > h1 {
