--- a/res/css/import/mixins/_typography.scss
+++ b/res/css/import/mixins/_typography.scss
@@ -55,7 +55,7 @@
 @mixin typo-display-4($colorContrast: false, $usePreferred: true) {
     font-family: $header-font;
     font-size: 112px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 1;
     letter-spacing: -0.04em;
 
@@ -67,7 +67,7 @@
 @mixin typo-display-3($colorContrast: false, $usePreferred: true) {
     font-family: $header-font;
     font-size: 56px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 1.35;
     letter-spacing: -0.02em;
 
@@ -225,14 +225,14 @@
 
 @mixin typo-button($colorContrast: false, $usePreferred: true) {
     @include typo-weight-medium;
-    font-family: $header-font;
-    font-size: 14px;
-    font-weight: 600;
-    text-transform: uppercase;
-    line-height: 1;
-    letter-spacing: 0;
+    font-family: $header-font !important;
+    font-size: 14px !important;
+    font-weight: 600 !important;
+    text-transform: uppercase !important;
+    line-height: 1 !important;
+    letter-spacing: 0 !important;
 
     @if $colorContrast {
-        opacity: 0.87;
+        opacity: 0.87 !important;
     }
 }
