--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -160,9 +160,7 @@ app-drawer-layout {
     background-size: cover;
     min-height: 680px;
     height: 100vh;
-    box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14),
-    inset 0 -3px 14px 2px rgba($color-black, .12),
-    inset 0 -5px 5px -3px rgba($color-black, .2);
+    box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14), inset 0 -3px 14px 2px rgba($color-black, .12), inset 0 -5px 5px -3px rgba($color-black, .2);
     margin-bottom: 32px;
     text-align: center;
 
@@ -175,6 +173,11 @@ app-drawer-layout {
 
         h1, paper-button {
             color: $text-color-primary-inverse;
+        }
+
+        p {
+            @include typo-subhead(true);
+            font-size: 22px;
         }
     }
 
