--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,8 @@
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:700|Arimo:400,700|Buenard:400,700|Cabin:400,500,600|Inconsolata:700|Kreon:300,400,700|Montserrat|Poppins:500,600,700|Roboto+Slab:300,400|Slabo+13px|Slabo+27px|Work+Sans:300,400,500,600,700"
           rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kreon:300,400,700|Poppins:400,500,600,700"
+          rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Styles -->
