--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -71,8 +71,6 @@ app-drawer-layout {
 
             app-toolbar {
                 color: $text-color-primary-inverse;
-                font-size: 18px;
-                padding-top: 1px;
                 box-sizing: border-box;
 
                 [main-title] {
@@ -329,7 +327,7 @@ footer {
 /* Small tablet */
 @media screen and (max-width: 840px) {
     app-toolbar {
-        height: 56px;
+        height: 56px !important;
     }
 
     .cover .cover-inner {
@@ -348,7 +346,7 @@ footer {
 /* Mobile */
 @media screen and (max-width: 480px) {
     app-toolbar {
-        padding: 0 8px;
+        padding: 0 8px !important;
     }
 
     .cover .cover-inner {
