--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -180,7 +180,7 @@ app-drawer-layout {
         }
 
         img {
-            width: 20%;
+            width: 240px;
         }
     }
 
@@ -217,7 +217,7 @@ app-drawer-layout {
 
 /* Work section */
 .apps, .libraries {
-    margin: 8px 0;
+    padding: 8px 0;
 
     paper-card {
         align-self: flex-start;
@@ -338,7 +338,7 @@ footer {
             font-size: 20px;
         }
         img {
-            width: 30%;
+            width: 240px;
         }
     }
 }
@@ -357,7 +357,7 @@ footer {
             font-size: 17px;
         }
         img {
-            width: 40%;
+            width: 144px;
         }
     }
 
