--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -157,7 +157,7 @@ app-drawer-layout {
     position: relative;
     background: no-repeat local center center;
     background-size: cover;
-    min-height: 680px;
+    min-height: 800px;
     height: 100vh;
     box-shadow: inset 0 -8px 10px 1px rgba($color-black, .14), inset 0 -3px 14px 2px rgba($color-black, .12), inset 0 -5px 5px -3px rgba($color-black, .2);
     margin-bottom: 32px;
@@ -167,11 +167,15 @@ app-drawer-layout {
         position: absolute;
         top: 50%;
         width: 100%;
-        transform: translateY(-50%);
+        transform: translateY(-50%) translateY(-16px);
         color: $text-color-secondary-inverse;
 
         h1, paper-button {
             color: $text-color-primary-inverse;
+        }
+
+        h1 {
+            font-size: 72px;
         }
 
         p {
