--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<div class="mdl-grid">
-    <article class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-cell--4-col-phone">
+<iron-grid>
+    <article class="post m12">
         {{content}}
     </article>
-</div>
+</iron-grid>
