--- a/res/css/import/_typography.scss
+++ b/res/css/import/_typography.scss
@@ -45,35 +45,35 @@ h1 {
     margin-bottom: 24px;
 }
 
-h2 {
+h2, article h1 {
     @include typo-display-2;
 
     margin-top: 24px;
     margin-bottom: 24px;
 }
 
-h3 {
+h3, article h2 {
     @include typo-display-1;
 
     margin-top: 24px;
     margin-bottom: 24px;
 }
 
-h4 {
+h4, article h3 {
     @include typo-headline;
 
     margin-top: 24px;
     margin-bottom: 16px;
 }
 
-h5 {
+h5, article h4 {
     @include typo-title;
 
     margin-top: 24px;
     margin-bottom: 16px;
 }
 
-h6 {
+h6, article h5 {
     @include typo-subhead;
 
     margin-top: 24px;
