--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -131,7 +131,7 @@ app-drawer-layout {
         app-header-layout {
 
             app-header {
-                background-color: rgba($color-primary, 0.12);
+                background: 0;
 
                 #backgroundRearLayer {
                     background: $color-primary;
@@ -176,11 +176,13 @@ app-drawer-layout {
 
         h1 {
             font-size: 72px;
+            margin-bottom: 0;
         }
 
         p {
             @include typo-subhead(true);
             font-size: 22px;
+            margin-bottom: 32px;
         }
 
         img {
@@ -229,7 +231,6 @@ app-drawer-layout {
         .card-content {
             h5 {
                 margin-top: 8px;
-                font-weight: 500;
             }
             p {
                 font-family: $body-font;
