--- a/res/css/import/_variables.scss
+++ b/res/css/import/_variables.scss
@@ -1,7 +1,7 @@
 @import "palette";
 
 /* Typography */
-$body-font: "Kreon", "Georgia", "Times New Roman", serif !default;
+$body-font: "Buenard", "Kreon", "Georgia", "Times New Roman", serif !default;
 $body-performance-font: "Georgia", "Times New Roman", serif !default;
 $header-font: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default;
 $button-font: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default;
