--- a/res/css/import/_prism.scss
+++ b/res/css/import/_prism.scss
@@ -10,7 +10,7 @@ pre[class*="language-"] {
     color: black;
     background: none;
     text-shadow: 0 1px white;
-    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-family: $code-font;
     text-align: left;
     white-space: pre;
     word-spacing: normal;
