--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -99,6 +99,7 @@ app-drawer-layout {
     app-drawer {
         @include shadow-8dp;
         z-index: 8;
+        background: $drawer-background;
 
         app-toolbar {
 
