--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -416,6 +416,7 @@ body {
   width: 100%;
   min-height: 100%;
     margin: 0;
+    background: #424242;
 }
 
 /*
@@ -1279,6 +1280,7 @@ app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button pap
 app-drawer-layout app-drawer {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
     z-index: 8;
+    background: #212121;
 }
 
 app-drawer-layout app-drawer app-toolbar h1 {
