--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1210,10 +1210,6 @@ $font-family-header: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !defa
 $font-family-button: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !default; // at 600
 $font-family-body: "Slabo 27px", "Georgia", "Times New Roman", serif !default;
 */
-body {
-    background: #fafafa;
-}
-
 paper-button {
   font-weight: 500 !important;
   font-family: "Poppins", "Roboto", "Helvetica", "Arial", sans-serif !important;
@@ -1280,6 +1276,9 @@ app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button pap
 app-drawer-layout app-drawer {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
     z-index: 8;
+}
+
+app-drawer-layout app-drawer .app-drawer {
     background: #212121;
 }
 
