--- a/res/css/import/_variables.scss
+++ b/res/css/import/_variables.scss
@@ -11,7 +11,7 @@ $code-font: "Source Code Pro", "Inconsolata", "Consolas", "Monaco", "Andale Mono
 $color-primary: $palette-grey-900;
 $color-primary-dark: $color-black;
 $color-accent: #dd1155;
-$theme-dark: true;
+$theme-dark: false;
 
 /* Background colors */
 $window-background: $palette-grey-50;
