--- a/res/css/import/_variables.scss
+++ b/res/css/import/_variables.scss
@@ -11,23 +11,14 @@ $code-font: "Source Code Pro", "Inconsolata", "Consolas", "Monaco", "Andale Mono
 $color-primary: $palette-grey-900;
 $color-primary-dark: $color-black;
 $color-accent: #dd1155;
-$theme-dark: false;
 
 /* Background colors */
 $window-background: $palette-grey-50;
-$drawer-background: $color-white;
-@if ($theme-dark) {
-    $window-background: $palette-grey-800;
-    $drawer-background: $palette-grey-900;
-}
+$drawer-background: $palette-grey-900;
 
 /* Text colors */
 $text-color-primary: rgba($color-black, 0.87);
 $text-color-secondary: rgba($color-black, 0.54);
-@if ($theme-dark) {
-    $text-color-primary: $color-white;
-    $text-color-secondary: rgba($color-black, 0.7);
-}
 
 $text-color-primary-inverse: $color-white;
 $text-color-secondary-inverse: rgba($color-white, 0.7);
@@ -37,6 +28,8 @@ $text-color-primary-link: mix($text-color-primary, $color-accent, $text-color-li
 $text-color-secondary-link: mix($text-color-secondary, $color-accent, $text-color-link-blend);
 $text-color-primary-inverse-link: mix($text-color-primary-inverse, $color-accent, $text-color-link-blend);
 $text-color-secondary-inverse-link: mix($text-color-secondary-inverse, $color-accent, $text-color-link-blend);
+
+$text-color-drawer: $text-color-primary-inverse;
 
 /* Footer colors */
 $footer-background: $palette-grey-100;
