--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -148,7 +148,7 @@
    Base styles: opinionated defaults
    ========================================================================== */
 html {
-  color: rgba(0, 0, 0, 0.87);
+    color: white;
   font-size: 1em;
     line-height: 1.4;
 }
@@ -416,7 +416,7 @@ body {
   width: 100%;
   min-height: 100%;
   margin: 0;
-    background: #fafafa;
+    background: #333333;
 }
 
 /*
@@ -450,7 +450,7 @@ blockquote:after {
 }
 
 hr {
-    border-color: rgba(0, 0, 0, 0.12);
+    border-color: rgba(255, 255, 255, 0.12);
 }
 
 /**
@@ -638,7 +638,7 @@ p {
 }
 
 a {
-  color: rgba(220, 17, 85, 0.99909);
+    color: #dd1356;
     font-weight: 500;
 }
 
@@ -1222,7 +1222,7 @@ paper-button {
 
 paper-button[raised][filled] {
     background: #212121;
-    color: white;
+    color: rgba(0, 0, 0, 0.87);
 }
 
 paper-item, paper-icon-item {
@@ -1244,7 +1244,7 @@ app-drawer-layout app-header-layout app-header #backgroundRearLayer, app-drawer-
 }
 
 app-drawer-layout app-header-layout app-header app-toolbar {
-    color: white;
+    color: rgba(0, 0, 0, 0.87);
     box-sizing: border-box;
 }
 
@@ -1271,13 +1271,13 @@ app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button {
 }
 
 app-drawer-layout app-header-layout app-header app-toolbar paper-icon-button paper-ripple {
-    color: white !important;
+    color: rgba(0, 0, 0, 0.87) !important;
 }
 app-drawer-layout app-drawer {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
   z-index: 8;
   background: #212121 !important;
-    color: rgba(0, 0, 0, 0.87) !important;
+    color: white !important;
 }
 
 app-drawer-layout app-drawer .app-drawer {
@@ -1295,6 +1295,10 @@ app-drawer-layout app-drawer app-toolbar h1 {
     font-weight: 600;
     line-height: 1;
     letter-spacing: 0.01em;
+}
+
+app-drawer-layout app-drawer hr {
+    border-color: rgba(0, 0, 0, 0.12);
 }
 
 app-drawer-layout app-drawer .narrow paper-button, app-drawer-layout app-drawer .narrow paper-icon-button {
@@ -1343,11 +1347,11 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
     top: 50%;
     width: 100%;
     transform: translateY(-50%) translateY(-16px);
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(0, 0, 0, 0.54);
 }
 
 .cover .cover-inner h1, .cover .cover-inner paper-button {
-    color: white;
+    color: rgba(0, 0, 0, 0.87);
 }
 
 .cover .cover-inner h1 {
@@ -1376,12 +1380,12 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
     width: 96px;
     height: 96px;
     margin-left: -48px;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(0, 0, 0, 0.54);
     transition: 0.3s color ease;
 }
 
 .cover paper-icon-button:hover {
-    color: white;
+    color: rgba(0, 0, 0, 0.87);
 }
 
 .cover paper-icon-button iron-icon {
@@ -1390,7 +1394,7 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
 }
 
 .cover paper-icon-button paper-ripple {
-    color: white !important;
+    color: rgba(0, 0, 0, 0.87) !important;
 }
 
 /* Services section */
@@ -1404,44 +1408,52 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
 }
 
 /* Work section */
-.apps, .libraries {
+.apps, .websites, .libraries {
     padding: 8px 0;
 }
 
-.apps h2, .libraries h2 {
+.apps h2, .websites h2, .libraries h2 {
     padding: 0 8px;
 }
 
-.apps paper-card, .libraries paper-card {
+.apps h2:after, .websites h2:after, .libraries h2:after {
+    content: "";
+    display: block;
+    margin-top: 8px;
+    margin-bottom: 16px;
+    border: 4px solid rgba(255, 255, 255, 0.7);
+}
+
+.apps paper-card, .websites paper-card, .libraries paper-card {
     align-self: flex-start;
 }
 
-.apps paper-card .card-content h5, .libraries paper-card .card-content h5 {
+.apps paper-card .card-content h5, .websites paper-card .card-content h5, .libraries paper-card .card-content h5 {
     margin-top: 8px;
 }
 
-.apps paper-card .card-content p, .libraries paper-card .card-content p {
+.apps paper-card .card-content p, .websites paper-card .card-content p, .libraries paper-card .card-content p {
     font-family: "Kreon", "Georgia", "Times New Roman", serif;
     font-size: 17px;
     margin-bottom: 0;
 }
 
-.apps paper-card .card-actions, .libraries paper-card .card-actions {
+.apps paper-card .card-actions, .websites paper-card .card-actions, .libraries paper-card .card-actions {
     padding-left: 8px;
     padding-right: 8px;
 }
 
-.apps paper-card .card-actions paper-button, .libraries paper-card .card-actions paper-button {
+.apps paper-card .card-actions paper-button, .websites paper-card .card-actions paper-button, .libraries paper-card .card-actions paper-button {
     margin: 0;
 }
 
-.apps .cta-cell, .libraries .cta-cell {
+.apps .cta-cell, .websites .cta-cell, .libraries .cta-cell {
     padding: 64px 16px;
     position: relative;
     text-align: center;
 }
 
-.apps .cta-cell p, .libraries .cta-cell p {
+.apps .cta-cell p, .websites .cta-cell p, .libraries .cta-cell p {
     font-family: "Kreon", "Georgia", "Times New Roman", serif;
     font-size: 17px;
     font-weight: 400;
@@ -1458,18 +1470,18 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
 /* Footer */
 footer {
   margin-top: 48px;
-  border-top: 1px solid rgba(0, 0, 0, 0.12);
+    border-top: 1px solid rgba(255, 255, 255, 0.12);
   padding: 24px;
   text-align: center;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  color: rgba(0, 0, 0, 0.54);
+    color: rgba(255, 255, 255, 0.7);
     background-color: whitesmoke;
 }
 
 footer a {
-    color: rgba(0, 0, 0, 0.54);
+    color: rgba(255, 255, 255, 0.7);
 }
 
 footer section.left, footer section.right {
